# live-face-deep-fake-

./: .gitignore  ADVANCED_PIPELINE.md  CMakeLists.txt  CONTRIBUTING.md  GITHUB_PUSH_COMMANDS.sh  GITHUB_README.md  GITHUB_SETUP.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MODEL_DOWNLOAD_GUIDE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  READY_FOR_GITHUB.txt  TESTING.md  download_models.sh  setup_virtual_camera.sh
src/: AdvancedFaceSwapper.cpp  AdvancedFaceSwapper.hpp  FaceAnonymizer.cpp  FaceAnonymizer.hpp  FaceSwapper.cpp  FaceSwapper.hpp  ModernGUI.cpp  ModernGUI.hpp  VirtualCamera.cpp  VirtualCamera.hpp  main.cpp
